Update player controls, replace player image, and add room backgrounds. Adjust store positions and scales for improved layout. Implement teleportation feature to enter rooms from stores.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </head>
 <body>
     <div id="ui">
-        <div>Use A/D or LEFT/RIGHT Arrow Keys to move</div>
-        <div>Press SPACE to enter stores</div>
+        <div>Use WASD or Arrow Keys to move</div>
+        <div>Press SPACE near stores to teleport to room</div>
     </div>
     <div id="game-container"></div>
     
